--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ python/__pycache__/
 python/tests/8-kyu/__pycache__/
 python/tests/__pycache__/
 python/solutions/__pycache__/
+python/utils/__pycache__/
